Fixed jsgantt , jump to today bug

--- a/www/dgantt/modules/timechart/css/style.css
+++ b/www/dgantt/modules/timechart/css/style.css
@@ -204,6 +204,12 @@
     text-align: center;
     font-size: 11px;
 }
+.fn-gantt .ganttWhite {
+    background-color: #ffffff;
+}
+.fn-gantt .ganttWhite .fn-label {
+    color: #ffffff !important;
+}
 
 .fn-gantt .ganttDarkBlue {
     background-color: #95C8D8;
